--- a/src/function/comment-submit/package.json
+++ b/src/function/comment-submit/package.json
@@ -6,6 +6,7 @@
     "@cloudbase/node-sdk": "^2.3.1",
     "axios": "^0.20.0",
     "blueimp-md5": "^2.17.0",
+    "cheerio": "^1.0.0-rc.3",
     "nodemailer": "^6.4.11",
     "querystring": "^0.2.0"
   }
