--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
+  "main": "./dist/twikoo.all.min.js",
   "publishConfig": {
     "access": "public"
   },
@@ -17,8 +18,11 @@
     "serve": "webpack-dev-server",
     "build": "webpack",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
+    "login": "tcb login",
     "deploy": "tcb functions:deploy",
-    "lint": "eslint"
+    "lint": "eslint",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "@cloudbase/cli": "^0.9.5",
@@ -33,6 +37,7 @@
     "svg-inline-loader": "^0.8.2",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.5.4",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
