--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "0.1.15",
+  "version": "0.2.0",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -19,36 +19,36 @@
     "build": "webpack",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
-    "deploy": "tcb functions:deploy",
+    "deploy": "tcb fn deploy twikoo --force",
     "lint": "eslint",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "@cloudbase/cli": "^0.9.5",
-    "copy-webpack-plugin": "^6.0.3",
+    "@cloudbase/cli": "^1.0.4",
+    "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^3.6.0",
-    "eslint": "^7.6.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^7.13.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "^4.1.0",
     "svg-inline-loader": "^0.8.2",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.5.4",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.12",
+    "vuepress": "^1.7.1",
     "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@cloudbase/js-sdk": "^1.0.4",
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "blueimp-md5": "^2.17.0",
-    "element-ui": "^2.13.2",
-    "marked": "^1.1.1",
-    "vue": "^2.6.11"
+    "@cloudbase/js-sdk": "^1.3.3",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "blueimp-md5": "^2.18.0",
+    "element-ui": "^2.14.1",
+    "marked": "^1.2.4",
+    "vue": "^2.6.12"
   }
 }
