fix(0.2.5): 新增评论审核，修复问题 * 新增 AKISMET 评论审核 * 新增 人工审核 * 修复 配置表为空时，无法保存配置 * 完善文档

--- a/src/function/twikoo/package.json
+++ b/src/function/twikoo/package.json
@@ -3,6 +3,7 @@
   "main": "index.js",
   "dependencies": {
     "@cloudbase/node-sdk": "^2.4.0",
+    "akismet-api": "^5.1.0",
     "axios": "^0.21.0",
     "blueimp-md5": "^2.18.0",
     "bowser": "^2.11.0",
