fix(0.3.1): 头像获取优化，修复 bug * 新增 支持自定义头像CDN * 新增 支持访客使用QQ头像作为评论头像 * 修复 邮件中的链接 URL #hash 不正确 * 重构 引入 eslint 代码检查，并优化代码

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -16,31 +16,32 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "serve": "webpack-dev-server",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
     "logout": "tcb logout",
     "deploy": "tcb fn deploy twikoo --force",
-    "lint": "eslint",
+    "lint": "eslint src/** --ignore-path .eslintignore",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "@cloudbase/cli": "^1.0.7",
-    "copy-webpack-plugin": "^6.3.2",
+    "copy-webpack-plugin": "^6.4.0",
     "css-loader": "^3.6.0",
-    "eslint": "^7.13.0",
+    "eslint": "^7.15.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^7.2.0",
     "svg-inline-loader": "^0.8.2",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.7.1",
     "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^4.1.0",
+    "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
