--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 charset = utf-8
 
-[{*.js,*.ts,*.html,*.gql,*.graqhql}]
+[{*.js,*.json,*.vue,*.html,*.css}]
 indent_style = space
 indent_size = 2
  
