--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "blueimp-md5": "^2.18.0",
     "element-ui": "^2.14.1",
     "marked": "^1.2.5",
+    "owo": "^1.0.2",
     "vue": "^2.6.12"
   }
 }
