--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -51,6 +51,7 @@
     "blueimp-md5": "^2.18.0",
     "element-ui": "^2.14.1",
     "marked": "^1.2.5",
+    "owo": "^1.0.2",
     "vue": "^2.6.12"
   }
 }
