--- a/src/function/twikoo/package.json
+++ b/src/function/twikoo/package.json
@@ -2,17 +2,20 @@
   "name": "twikoo-func",
   "main": "index.js",
   "dependencies": {
+    "@cloudbase/manager-node": "^3.8.2",
     "@cloudbase/node-sdk": "^2.4.4",
     "akismet-api": "^5.1.0",
     "axios": "^0.21.0",
     "blueimp-md5": "^2.18.0",
     "bowser": "^2.11.0",
     "cheerio": "^1.0.0-rc.3",
+    "crypto-js": "^4.0.0",
     "dompurify": "^2.2.3",
     "jsdom": "^16.4.0",
     "marked": "^1.2.5",
     "nodemailer": "^6.4.16",
     "querystring": "^0.2.0",
+    "tencentcloud-sdk-nodejs": "^4.0.33",
     "xml2js": "^0.4.23"
   }
 }
