--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "homepage": "https://twikoo.js.org",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "serve": "webpack-dev-server",
+    "dev": "node_modules/.bin/webpack serve",
+    "serve": "node_modules/.bin/webpack serve",
     "build": "webpack --mode production",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
@@ -26,9 +26,15 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/cli": "7.12.10",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/runtime": "^7.12.5",
     "@cloudbase/cli": "^1.0.7",
+    "@webpack-cli/serve": "^1.1.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^6.4.0",
     "css-loader": "^3.6.0",
@@ -40,13 +46,14 @@
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^7.2.0",
     "svg-inline-loader": "^0.8.2",
+    "terser-webpack-plugin": "^5.0.3",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.7.1",
-    "webpack": "^4.44.1",
+    "webpack": "^5.11.1",
     "webpack-bundle-analyzer": "^4.2.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "dependencies": {
     "@cloudbase/js-sdk": "1.3.4-alpha.1",
