--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "homepage": "https://twikoo.js.org",
   "scripts": {
-    "dev": "node_modules/.bin/webpack serve",
-    "serve": "node_modules/.bin/webpack serve",
+    "dev": "webpack serve --mode development",
+    "serve": "webpack serve --mode development",
     "build": "webpack --mode production",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
