--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -14,8 +14,8 @@
   },
   "homepage": "https://twikoo.js.org",
   "scripts": {
-    "dev": "node_modules/.bin/webpack serve",
-    "serve": "node_modules/.bin/webpack serve",
+    "dev": "webpack serve --mode development",
+    "serve": "webpack serve --mode development",
     "build": "webpack --mode production",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
