--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: jenkey2011/vuepress-deploy@ecff9f2
+      - uses: imaegoo/vuepress-deploy@5ba4288
         env:
           ACCESS_TOKEN: ${{ secrets.TWIKOO_TOKEN }}
           TARGET_REPO: imaegoo/twikoo
