--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,5 +19,6 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: yarn publish
+      - run: cd src/function/twikoo && yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
