--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ name: Publish
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   publish-npm:
@@ -19,6 +20,8 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: yarn publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - run: cd src/function/twikoo && yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
