--- a/src/function/twikoo/package.json
+++ b/src/function/twikoo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo-func",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -17,7 +17,7 @@
     "axios": "^0.21.1",
     "blueimp-md5": "^2.18.0",
     "bowser": "^2.11.0",
-    "cheerio": "^1.0.0-rc.5",
+    "cheerio": "1.0.0-rc.5",
     "crypto-js": "^4.0.0",
     "dompurify": "^2.2.6",
     "jsdom": "^16.4.0",
