feat(func): support vercel serverless

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,12 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: yarn install
       - run: yarn build
-      - run: yarn publish # --tag beta
+      - run: yarn publish --tag alpha
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-      - run: cd src/function/twikoo && yarn publish # --tag beta
+      - run: cd src/function/twikoo && yarn publish --tag alpha
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - run: cd src/function/vercel && yarn publish --tag alpha
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
