--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "1.3.1",
+  "version": "1.4.0-alpha.1",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -33,10 +33,14 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/runtime": "^7.12.13",
     "@cloudbase/cli": "^1.5.0",
+    "@cloudbase/js-sdk": "^1.4.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@webpack-cli/serve": "^1.3.0",
     "babel-loader": "^8.2.2",
+    "blueimp-md5": "^2.18.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^3.6.0",
+    "element-ui": "^2.15.0",
     "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -44,8 +48,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^7.5.0",
+    "marked": "^2.0.0",
+    "owo": "^1.0.2",
+    "prismjs": "^1.23.0",
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.1.1",
+    "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.8.0",
@@ -53,15 +61,5 @@
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.0.0-beta.0"
-  },
-  "dependencies": {
-    "@cloudbase/js-sdk": "^1.4.0",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "blueimp-md5": "^2.18.0",
-    "element-ui": "^2.15.0",
-    "marked": "^2.0.0",
-    "owo": "^1.0.2",
-    "prismjs": "^1.23.0",
-    "vue": "^2.6.12"
   }
 }
