fix(vercel): fix search comment * 改进 评论人的网站和评论中的链接增加 rel="noopener noreferrer" 参数 * 修复 Vercel 环境评论管理，无法搜索评论 * 修复 部分主题下，评论管理，下拉框的选项，文字颜色为白色

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,12 +19,12 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: yarn install
       - run: yarn build
-      - run: yarn publish --tag alpha
+      - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-      - run: cd src/function/twikoo && yarn publish --tag alpha
+      - run: cd src/function/twikoo && yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-      - run: cd src/vercel && yarn publish --tag alpha
+      - run: cd src/vercel && yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
