--- a/src/vercel/package.json
+++ b/src/vercel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo-vercel",
-  "version": "1.4.0-alpha.5",
+  "version": "1.4.0",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
