--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@cloudbase/cli": "^1.9.5",
     "@cloudbase/js-sdk": "^1.7.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@vue/compat": "^3.2.21",
+    "@vue/compiler-sfc": "^3.2.21",
     "@webpack-cli/serve": "^1.6.0",
     "babel-loader": "^8.2.3",
     "blueimp-md5": "^2.19.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
     "element-ui": "^2.15.6",
+    "element-plus": "^1.2.0-beta.3",
     "eslint": "^8.2.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -53,9 +56,8 @@
     "prismjs": "^1.25.0",
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.2.5",
-    "vue": "^2.6.14",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14",
+    "vue": "^3.2.21",
+    "vue-loader": "^16.8.3",
     "vuepress": "^1.8.2",
     "webpack": "^5.63.0",
     "webpack-bundle-analyzer": "^4.5.0",
