--- a/src/vercel/package.json
+++ b/src/vercel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo-vercel",
-  "version": "1.4.18",
+  "version": "1.5.0",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "cheerio": "1.0.0-rc.5",
     "crypto-js": "^4.0.0",
     "dompurify": "^2.2.6",
+    "form-data": "^4.0.0",
     "jsdom": "^16.4.0",
     "marked": "^4.0.12",
     "mongodb": "^3.6.3",
