feat: support pushoo | fix: upload image via serverless to protect 7bu token (#329)
* fix: upload image via serverless to protect 7bu token
* feat: support pushoo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "twikoo",
-  "version": "1.4.18",
+  "version": "1.5.0",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
+  "keywords": ["twikoojs", "comment", "comment-system", "cloudbase", "vercel"],
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
   "main": "./dist/twikoo.all.min.js",
