--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "twikoo",
-  "version": "1.5.8",
+  "version": "1.5.9",
   "description": "A simple comment system based on Tencent CloudBase (tcb).",
-  "keywords": ["twikoojs", "comment", "comment-system", "cloudbase", "vercel"],
+  "keywords": [
+    "twikoojs",
+    "comment",
+    "comment-system",
+    "cloudbase",
+    "vercel"
+  ],
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
   "main": "./dist/twikoo.all.min.js",
@@ -51,7 +57,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "marked": "^4.0.12",
     "owo": "^1.0.2",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.28.0",
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.2.5",
     "vue": "^2.6.14",
