--- a/src/vercel/package.json
+++ b/src/vercel/package.json
@@ -18,6 +18,7 @@
     "cheerio": "1.0.0-rc.5",
     "crypto-js": "^4.0.0",
     "dompurify": "^2.2.6",
+    "dy-node-ip2region": "^1.0.1",
     "form-data": "^4.0.0",
     "jsdom": "^16.4.0",
     "marked": "^4.0.12",
