--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "vuepress": "^1.8.2",
+    "vuepress": "^2.0.0-beta.45",
     "webpack": "^5.63.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
