--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,6 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.TWIKOO_TOKEN }}
           TARGET_REPO: imaegoo/twikoo
           TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: yarn global add vuepress@^2.0.0-beta.45 && vuepress build docs
+          BUILD_SCRIPT: yarn global add vuepress@^2.0.0-beta.45 && yarn && vuepress build docs
           BUILD_DIR: docs/.vuepress/dist
           CNAME: twikoo.js.org
