--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "logout": "tcb logout",
     "deploy": "tcb fn deploy twikoo --force",
     "lint": "eslint src/** --ignore-path .eslintignore",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:dev": "cd docs && yarn docs:dev",
+    "docs:build": "cd docs && yarn docs:build"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -63,7 +63,6 @@
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "vuepress": "^2.0.0-beta.45",
     "webpack": "^5.63.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
