doc: update to vuepress 2

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,5 +19,5 @@ jobs:
           TARGET_REPO: imaegoo/twikoo
           TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: cd docs && yarn && yarn docs:build
-          BUILD_DIR: docs/.vuepress/dist
+          BUILD_DIR: .vuepress/dist
           CNAME: twikoo.js.org
