--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        # VuePress 需要完整提交历史来生成贡献者信息
+        with:
+          fetch-depth: 0
       - uses: imaegoo/vuepress-deploy@master
         env:
           ACCESS_TOKEN: ${{ secrets.TWIKOO_TOKEN }}
