--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "docs:build": "vuepress build ."
   },
   "devDependencies": {
+    "@vuepress/plugin-search": "^2.0.0-beta.45",
     "vuepress": "^2.0.0-beta.45"
   }
 }
