--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twikoo",
   "version": "1.5.11",
-  "description": "A simple comment system based on Tencent CloudBase (tcb).",
+  "description": "A simple comment system.",
   "keywords": [
     "twikoojs",
     "comment",
