--- a/src/server/vercel/package.json
+++ b/src/server/vercel/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twikoo-vercel",
   "version": "1.5.11",
-  "description": "A simple comment system based on Tencent CloudBase (tcb).",
+  "description": "A simple comment system.",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
   "main": "api/index.js",
