--- a/src/server/self-hosted/package.json
+++ b/src/server/self-hosted/package.json
@@ -4,14 +4,17 @@
   "description": "A simple comment system.",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
-  "main": "index.js",
+  "main": "server.js",
+  "bin": {
+    "twikoo": "server.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/imaegoo/twikoo.git"
   },
   "homepage": "https://twikoo.js.org",
   "dependencies": {
-    "rxdb": "^12.7.16",
+    "lokijs": "^1.5.12",
     "twikoo-func": "1.6.0-beta.1",
     "uuid": "^8.3.2"
   }
