--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,10 @@ jobs:
         run: cd src/server/vercel && yarn publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - if: "github.event.release.prerelease"
+        run: cd src/server/self-hosted && yarn publish --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - if: "!github.event.release.prerelease"
         run: yarn publish
         env:
@@ -41,5 +45,9 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - if: "!github.event.release.prerelease"
         run: cd src/server/vercel && yarn publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - if: "!github.event.release.prerelease"
+        run: cd src/server/self-hosted && yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
