--- a/src/server/self-hosted/package.json
+++ b/src/server/self-hosted/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tkserver",
-  "version": "1.6.0-beta.2",
+  "version": "1.6.0",
   "description": "A simple comment system.",
   "keywords": [
     "twikoo",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "lokijs": "^1.5.12",
-    "twikoo-func": "1.6.0-beta.2",
+    "twikoo-func": "1.6.0",
     "uuid": "^8.3.2"
   }
 }
