--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "marked": "^4.0.12",
+    "mini-css-extract-plugin": "^2.6.1",
     "owo": "^1.0.2",
     "prismjs": "^1.28.0",
     "svg-inline-loader": "^0.8.2",
