--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "description": "A simple comment system.",
   "keywords": [
     "twikoojs",
@@ -23,7 +23,7 @@
   "scripts": {
     "dev": "webpack serve --mode development",
     "serve": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
     "logout": "tcb logout",
@@ -46,6 +46,7 @@
     "babel-loader": "^8.2.3",
     "blueimp-md5": "^2.19.0",
     "copy-webpack-plugin": "^9.0.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "element-ui": "^2.15.6",
     "eslint": "^8.2.0",
