--- a/src/server/self-hosted/package.json
+++ b/src/server/self-hosted/package.json
@@ -24,6 +24,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "get-user-ip": "^1.0.1",
     "lokijs": "^1.5.12",
     "twikoo-func": "1.6.7",
     "uuid": "^8.3.2"
