--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
     "docs:build": "vuepress build ."
   },
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "next",
-    "vuepress": "next"
+    "@vuepress/plugin-docsearch": "2.0.0-beta.49",
+    "vuepress": "2.0.0-beta.49"
   }
 }
