docs: use vitepress

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,5 +22,5 @@ jobs:
           TARGET_REPO: imaegoo/twikoo
           TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: cd docs && yarn && yarn docs:build
-          BUILD_DIR: .vuepress/dist
+          BUILD_DIR: .vitepress/dist
           CNAME: twikoo.js.org
