--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,9 @@ dist
 # public
 
 # vuepress build output
-.vuepress/dist
+docs/.vuepress/dist
+docs/.vitepress/dist
+docs/.vitepress/cache
 
 # Serverless directories
 .serverless/
