--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/imaegoo/twikoo.git"
+    "url": "https://github.com/twikoojs/twikoo.git"
   },
   "homepage": "https://twikoo.js.org",
   "scripts": {
