--- a/src/server/vercel/package.json
+++ b/src/server/vercel/package.json
@@ -7,7 +7,7 @@
   "main": "api/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imaegoo/twikoo.git"
+    "url": "https://github.com/twikoojs/twikoo.git"
   },
   "homepage": "https://twikoo.js.org",
   "dependencies": {
