--- a/src/server/huggingface-space/Dockerfile
+++ b/src/server/huggingface-space/Dockerfile
@@ -1,13 +1,3 @@
-FROM node:18
-
+FROM imaegoo/twikoo
 ARG MONGODB_URI
-
-RUN git clone https://github.com/twikoojs/twikoo.git
-
-WORKDIR /twikoo/src/server/self-hosted/
-
-RUN yarn
-
 EXPOSE 8080
-
-CMD ["node", "server.js"]
