--- a/src/server/pkg/.eslintignore
+++ b/src/server/pkg/.eslintignore
@@ -5,6 +5,5 @@ LICENSE
 src/client/lib/marked/*
 src/server/self-hosted/data/*
 yarn.lock
-src/server/pkg/dist/*
-src/server/pkg/patches/*
-src/server/pkg/web.config
+patches/
+web.config
