--- a/src/server/function/twikoo/package.json
+++ b/src/server/function/twikoo/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "twikoo-func",
-  "version": "1.6.32",
+  "name": "twikoo-func-cloudflare-patch",
+  "version": "1.6.33-rc.0",
   "description": "A simple comment system.",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
