--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twikoo",
-  "version": "1.6.44",
+  "version": "1.0.0",
   "description": "A simple comment system.",
   "keywords": [
     "twikoojs",
@@ -69,6 +69,10 @@
     "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^4.4.0"
+  },
+  "dependencies": {
+    "lokijs": "^1.5.12",
+    "mongodb": "^6.19.0"
   }
 }
