--- a/src/server/self-hosted/package.json
+++ b/src/server/self-hosted/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tkserver",
-  "version": "1.6.44",
+  "version": "1.0.0",
   "description": "A simple comment system.",
   "keywords": [
     "twikoo",
@@ -28,6 +28,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "cos-nodejs-sdk-v5": "^2.11.19",
+    "dotenv": "^17.2.2",
     "get-user-ip": "^1.0.1",
     "lokijs": "^1.5.12",
     "mongodb": "^6.3.0",
