--- a/src/server/eo-pages/package.json
+++ b/src/server/eo-pages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twikoo-edgeone-pages",
   "version": "1.6.44",
-  "description": "Twikoo comment system for EdgeOne Pages.",
+  "description": "Twikoo comment system backend for Tencent EdgeOne Pages",
   "author": "imaegoo <hello@imaegoo.com> (https://github.com/imaegoo)",
   "license": "MIT",
   "type": "module",
@@ -11,16 +11,24 @@
     "url": "https://github.com/twikoojs/twikoo.git"
   },
   "homepage": "https://twikoo.js.org",
+  "keywords": [
+    "twikoo",
+    "comment",
+    "edgeone",
+    "serverless",
+    "edge-computing"
+  ],
   "scripts": {
     "dev": "edgeone pages dev",
-    "build": "node build.cjs"
+    "build": "node build.cjs",
+    "postinstall": "node build.cjs"
   },
   "dependencies": {
+    "@imaegoo/node-ip2region": "^2.1.1",
+    "bowser": "^2.13.1",
+    "pako": "^2.1.0",
     "twikoo-func": "^1.6.44",
     "uuid": "^8.3.2",
     "xss": "^1.0.15"
-  },
-  "devDependencies": {
-    "esbuild": "^0.27.2"
   }
 }
